force-app/main/default/objects/FNS_Officer__c/fields/FNS_Email__c.field-meta.xml
<CustomField>
    <fullName>FNS_Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>