force-app/main/default/objects/FNS_Officer__c/fields/FNS_FirstName__c.field-meta.xml
<CustomField>
    <fullName>FNS_FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>