force-app/main/default/objects/FNS_Officer__c/fields/FNS_LastName__c.field-meta.xml
<CustomField>
    <fullName>FNS_LastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>