force-app/main/default/objects/FNS_Officer__c/fields/FNS_OfficerId__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficerId__c</fullName>
    <label>Officer Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>