force-app/main/default/objects/FNS_Officer__c/fields/FNS_OfficerType__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficerType__c</fullName>
    <label>Officer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Officer</fullName>
            </value>
            <value>
                <fullName>Secondary Officer</fullName>
            </value>
            <value>
                <fullName>Tertiary Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>