force-app/main/default/objects/FNS_Officer__c/fields/FNS_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>