force-app/main/default/objects/FNS_Officer__c/recordTypes/FNS_Officer.recordType-meta.xml
<RecordType>
    <fullName>FNS_Officer</fullName>
    <active>true</active>
    <label>Officer</label>
</RecordType>