force-app/main/default/objects/FNS_Officer__c/recordTypes/FNS_Officer_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>FNS_Officer_Read_Only</fullName>
    <active>true</active>
    <label>Officer Read Only</label>
</RecordType>