force-app/main/default/objects/FNS_Officer__c/listViews/FNS_Officers.listView-meta.xml
<ListView>
    <fullName>FNS_Officers</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Officers</label>
</ListView>